--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>SLA Robotics -- FRC 4454</title>
+<title>FRC 4454 -- The Rocketeers</title>
 <link rel="stylesheet" type="text/css" href="robotics.css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="/js/jquery.easing.1.3.js"></script>
