--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 </script>
 </head>
 <body>
-<blink>
-COMING SOON TO DVD<br />
-RUGRATS 3D<br />
-</blink>
-<h1>JUST KIDDING</h1>
+<h1><blink><font size="100px">COMICSANSREVIVAL</font></blink></h1>
 </body>
 </html>
