--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <title>FRC 4454 -- The Rocketeers</title>
 <link rel="stylesheet" type="text/css" href="robotics.css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script type="text/javascript">
+<script type="text/javascript">   
+$(document).mousemove(function(e){
+       $('#box').css({top:e.pageY,left:e.pageX});
+});
 </script>
 </head>
 <body>
-<h1><blink><font size="100px">COMICSANSREVIVAL</font></blink></h1>
+<h1 id="box" style=" position:absolute; width:10px; height:10px; text-decoration: blink;"><font size="100px">COMICSANSREVIVAL</font></h1>
 </body>
 </html>
