--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<title>SLA ROBOTICS</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="/js/galleria/themes/classicmod/galleria.classicmod.css">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js" type="text/javascript"></script>
+<script src="/js/cufon-yui.js" type="text/javascript"></script>
+<script src="http://wilsonbiggs.com/js/fonts/helvetica_400-helvetica_750-helvetica_italic_300-helvetica_italic_500.font.js" type="text/javascript"></script>
+<script src="/js/jquery.easing.1.3.js" type="text/javascript"></script>
+<script src="/js/galleria/galleria-1.2.9.min.js"></script>
+<script src="/js/galleria/themes/classicmod/galleria.classicmod.js"></script>
+<script type="text/javascript">
+Cufon.replace('div.nav', {hover:'true'});
+Cufon.replace('div.title', {hover:'true'});
+$(document).ready(function() {
+	$('div.nav').each(function() {
+		$(this).hover(function() {
+			$(this).css({
+				"text-decoration": "underline;",
+			});
+		},
+		function() {
+			$(this).css({
+				"text-decoration": "none;",
+			});
+		});
+	});
+});
+$(document).ready(function() {
+	$("#nav").each(function() {
+		$(this).hide();
+	});
+});
+$(document).ready(function() {
+	$(".title").each(function() {
+		$(this).hide();
+	});
+});
+$(document).ready(function() {
+	$("#galleria").each(function() {
+		$(this).hide();
+	});
+});
+$(window).load(function() {
+	$("#nav").delay(100).fadeIn(600);
+	$(".title").delay(700).fadeIn(600);
+	$("#galleria").delay(1300).fadeIn(600);
+});
+</script>
 </head>
 <body>
-
-
+<div id="container">
+<div id="nav">
+<div id="logo" class="nav">
+SLA ROBOTICS
+</div>
+<div id="items">
+<div id="item1" class="navbutton nav">
+<i>members</i>
+</div>
+<div id="item2" class="navbutton nav">
+<i>robots</i>
+</div>
+<div id="item3" class="navbutton nav">
+<i>sponsors</i>
+</div>
+</div>
+</div>
+<div id="content">
+<div id="home" class="content">
+<div id="hometitle" class="title">
+<b>welcome to our website!</b>
+</div>
+<div id="galleria">
+    <img src="/robotics1/roboticbg.png"></img>
+	<script>
+		Galleria.run('#galleria');
+		Galleria.configure({
+		imageCrop: true,
+		carouselSpeed: 3000,
+		autoplay: 3000
+		});
+	</script>
+</div>
+</div>
+</div>
+</div>
+<script type="text/javascript"> Cufon.now(); </script>
 </body>
 </html>
