--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <title>SLA ROBOTICS</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="js/galleria/themes/classicmod/galleria.classicmod.css">
+<link rel="stylesheet" href="https://github.com/slarobotics/website/blob/redesign/js/galleria/themes/classicmod/galleria.classicmod.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js" type="text/javascript"></script>
-<script src="js/cufon-yui.js" type="text/javascript"></script>
-<script src="http://wilsonbiggs.com/js/fonts/helvetica_400-helvetica_750-helvetica_italic_300-helvetica_italic_500.font.js" type="text/javascript"></script>
-<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-<script src="js/galleria/galleria-1.2.9.min.js"></script>
-<script src="js/galleria/themes/classicmod/galleria.classicmod.js"></script>
+<script src="https://github.com/slarobotics/website/blob/redesign/js/cufon-yui.js" type="text/javascript"></script>
+<script src="http://wilsonbiggs.com/https://github.com/slarobotics/website/blob/redesign/js/fonts/helvetica_400-helvetica_750-helvetica_italic_300-helvetica_italic_500.font.js" type="text/javascript"></script>
+<script src="https://github.com/slarobotics/website/blob/redesign/js/jquery.easing.1.3.js" type="text/javascript"></script>
+<script src="https://github.com/slarobotics/website/blob/redesign/js/galleria/galleria-1.2.9.min.js"></script>
+<script src="https://github.com/slarobotics/website/blob/redesign/js/galleria/themes/classicmod/galleria.classicmod.js"></script>
 <script type="text/javascript">
 Cufon.replace('div.nav', {hover:'true'});
 Cufon.replace('div.title', {hover:'true'});
